--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "krow_package": "file:krow_package",
     "nodemon": "^1.17.5",
     "utf8": "^3.0.0"
   },
