--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "krow_package": "file:krow_package",
+    "node-schedule": "^1.3.0",
     "nodemon": "^1.17.5",
     "utf8": "^3.0.0"
   },
